--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
         </video>
         
         <div class="relative z-10 text-center px-4 sm:px-6 lg:px-8 max-w-4xl mx-auto">
+            <div class="mb-8 flex justify-center relative group">
+                <div class="w-48 h-48 rounded-full bg-gradient-to-r from-blue-500 to-blue-600 absolute blur-lg group-hover:blur-xl transition-all duration-300"></div>
+                <img src="./assets/images/emiro.png" alt="Mohamad Kharizal Firdaus" class="w-48 h-48 rounded-full object-cover shadow-lg border-4 border-white dark:border-gray-700 hover:scale-105 transition-transform duration-300 relative z-10">
+            </div>
             <h1 class="text-5xl md:text-6xl font-bold text-white mb-6 animate-fade-in-up">
                 <span class="gradient-text">EEPIS Multirotor Research Team</span>
             </h1>
