--- a/pages/allmembers.html
+++ b/pages/allmembers.html
@@ -183,7 +183,7 @@
         <section id="gen11" class="mb-16 scroll-mt-24">
             <div class="flex items-center justify-between mb-8">
                 <h2 class="text-3xl font-bold text-dark-900">
-                    Generation 11 <span class="text-primary-600">(2023-2024)</span>
+                    Generation 11 <span class="text-primary-600">(2025-2026)</span>
                 </h2>
                 <span class="bg-green-100 text-green-800 px-3 py-1 rounded-full text-sm font-medium">
                     Current Team
@@ -443,7 +443,7 @@
             <div class="flex flex-col items-center">
                 <h4 class="text-lg font-semibold mb-4 pb-2 border-b border-dark-700 w-full text-center">Quick Links</h4>
                 <ul class="space-y-3 text-center">
-                    <li><a href="#home" class="text-gray-400 hover:text-white transition-colors duration-300">Home</a></li>
+                    <li><a href=" " class="text-gray-400 hover:text-white transition-colors duration-300">Home</a></li>
                     <li><a href="#achievements" class="text-gray-400 hover:text-white transition-colors duration-300">Achievements</a></li>
                     <li><a href="#team" class="text-gray-400 hover:text-white transition-colors duration-300">Our Team</a></li>
                     <li><a href="pages/allmembers.html" class="text-gray-400 hover:text-white transition-colors duration-300">All Members</a></li>
