--- a/index.html
+++ b/index.html
@@ -319,11 +319,11 @@
                         <h3 class="text-xl font-bold text-dark-900 mb-1">Apan</h3>
                         <p class="text-primary-600 font-medium mb-4">Programming Division</p>
                         <div class="flex justify-center space-x-3">
-                            <a href="#" class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-dark-500 hover:bg-primary-100 hover:text-primary-600">
-                                <i class="fab fa-github text-sm"></i>
-                            </a>
-                            <a href="#" class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-dark-500 hover:bg-primary-100 hover:text-primary-600">
+                            <a href="#" class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-dark-500 hover:bg-primary-100 hover:text-primary-600 transition-colors">
                                 <i class="fab fa-linkedin-in text-sm"></i>
+                            </a>
+                            <a href="https://github.com/grouckfly" class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-dark-500 hover:bg-primary-100 hover:text-primary-600">
+                                <i class="fab fa-github text-sm"></i>
                             </a>
                         </div>
                     </div>
@@ -352,11 +352,11 @@
                         <h3 class="text-xl font-bold text-dark-900 mb-1">Rasqy</h3>
                         <p class="text-primary-600 font-medium mb-4">Mechanical Division</p>
                         <div class="flex justify-center space-x-3">
-                            <a href="#" class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-dark-500 hover:bg-primary-100 hover:text-primary-600">
+                            <a href="https://www.linkedin.com/in/ramanda-rasqy-49ab94315/" class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-dark-500 hover:bg-primary-100 hover:text-primary-600">
                                 <i class="fab fa-linkedin-in text-sm"></i>
                             </a>
-                            <a href="#" class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-dark-500 hover:bg-primary-100 hover:text-primary-600">
-                                <i class="fas fa-envelope text-sm"></i>
+                            <a href="https://www.instagram.com/_rsqiprtma?igsh=aW45c3F1b2w3a210" class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-dark-500 hover:bg-primary-100 hover:text-primary-600">
+                                <i class="fab fa-instagram text-sm"></i>
                             </a>
                         </div>
                     </div>
@@ -368,11 +368,11 @@
                         <h3 class="text-xl font-bold text-dark-900 mb-1">Dipan</h3>
                         <p class="text-primary-600 font-medium mb-4">Mechanical Division</p>
                         <div class="flex justify-center space-x-3">
-                            <a href="#" class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-dark-500 hover:bg-primary-100 hover:text-primary-600">
+                            <a href="https://www.linkedin.com/in/dyfandzaky-koesoema-putra-15156a332/" class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-dark-500 hover:bg-primary-100 hover:text-primary-600 transition-colors">
                                 <i class="fab fa-linkedin-in text-sm"></i>
                             </a>
-                            <a href="#" class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-dark-500 hover:bg-primary-100 hover:text-primary-600">
-                                <i class="fas fa-envelope text-sm"></i>
+                            <a href="https://www.instagram.com/dyfandzaky/" class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-dark-500 hover:bg-primary-100 hover:text-primary-600 transition-colors">
+                                <i class="fab fa-instagram text-sm"></i>
                             </a>
                         </div>
                     </div>
@@ -480,7 +480,7 @@
         <!-- Copyright - Centered -->
         <div class="border-t border-dark-700 pt-8 text-center">
             <p class="text-gray-500 text-sm">
-                © 2025 EMIRO Team. All rights reserved.
+                © 2023 EMIRO Team. All rights reserved.
             </p>
         </div>
     </div>
