--- a/pages/allmembers.html
+++ b/pages/allmembers.html
@@ -543,7 +543,7 @@
                     <li><a href="../index.html" class="text-gray-400 hover:text-white transition-colors duration-300">Home</a></li>
                     <li><a href="../index.html#achievements" class="text-gray-400 hover:text-white transition-colors duration-300">Achievements</a></li>
                     <li><a href="../index.html#team" class="text-gray-400 hover:text-white transition-colors duration-300">Our Team</a></li>
-                    <li><a href="pages/allmembers.html" class="text-gray-400 hover:text-white transition-colors duration-300">All Members</a></li>
+                    <li><a href="allmembers.html" class="text-gray-400 hover:text-white transition-colors duration-300">All Members</a></li>
                 </ul>
             </div>
 
