--- a/pages/allmembers.html
+++ b/pages/allmembers.html
@@ -348,12 +348,12 @@
                     <h3 class="text-xl font-bold text-dark-900 mb-1">Naila</h3>
                     <p class="text-primary-600 font-medium mb-4">Non-Technical Division</p>
                     <div class="flex justify-center space-x-3">
-                        <a href="#" class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-dark-500 hover:bg-primary-100 hover:text-primary-600 transition-colors">
-                            <i class="fab fa-linkedin-in text-sm"></i>
-                        </a>
-                        <a href="#" class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-dark-500 hover:bg-primary-100 hover:text-primary-600 transition-colors">
-                            <i class="fas fa-envelope text-sm"></i>
-                        </a>
+                         <!-- <a href="#" class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-dark-500 hover:bg-primary-100 hover:text-primary-600">
+                                <i class="fab fa-linkedin-in text-sm"></i>
+                            </a>-->
+                            <a href="https://www.instagram.com/n.dhfna?igsh=MWI0YTNkOHNqNHlrNQ==" class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-dark-500 hover:bg-primary-100 hover:text-primary-600">
+                                <i class="fas fa-instagram text-sm"></i>
+                            </a>
                     </div>
                 </div>
                 
