--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                                 <i class="fab fa-linkedin-in text-sm"></i>
                             </a>-->
                             <a href="https://www.instagram.com/n.dhfna?igsh=MWI0YTNkOHNqNHlrNQ==" class="w-8 h-8 rounded-full bg-gray-100 flex items-center justify-center text-dark-500 hover:bg-primary-100 hover:text-primary-600">
-                                <i class="fas fa-instagram text-sm"></i>
+                                <i class="fab fa-instagram text-sm"></i>
                             </a>
                         </div>
                     </div>
